edited preset filename

--- a/miRNA_species_converter.Rmd
+++ b/miRNA_species_converter.Rmd
@@ -19,7 +19,7 @@ params:
   output_file:
     label: "Output filename"
     input: "text"
-    value: "species_converter_input"
+    value: "species_converter_output"
     
     
     
